force-app/main/default/objects/CS_Service_Complaint_Product__c/CS_Service_Complaint_Product__c.object-meta.xml
<CustomObject>
    <description>This object stores information about details of product of an order (like Product Name, Product Code, Quantity Ordered, Quantity Affected) for which support case is created.</description>
    <label>Service Complaint</label>
    <nameField>
        <displayFormat>SCP-{000000}</displayFormat>
        <label>Service Complaint Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Complaints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>