force-app/main/default/objects/CS_Service_Complaint_Product__c/fields/CS_Case__c.field-meta.xml
<CustomField>
    <fullName>CS_Case__c</fullName>
    <description>Case Number of the order of the service complaint product.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Service_Complaint_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>