force-app/main/default/objects/CS_Service_Complaint_Product__c/fields/CS_Product__c.field-meta.xml
<CustomField>
    <fullName>CS_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product Name in the order complained.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Service_Complaint_Products</relationshipName>
    <type>Lookup</type>
</CustomField>