force-app/main/default/objects/CS_Service_Complaint_Product__c/fields/CS_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>CS_Product_Code__c</fullName>
    <formula>CS_Product__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>