force-app/main/default/objects/CS_Service_Complaint_Product__c/fields/CS_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>CS_Product_Description__c</fullName>
    <description>The SKU Description of the related product.</description>
    <formula>CS_Product__r.SKU_DESCRIPTION__c</formula>
    <inlineHelpText>Product SKU Description</inlineHelpText>
    <label>Product Description</label>
    <type>Text</type>
</CustomField>