force-app/main/default/objects/CS_Service_Complaint_Product__c/fields/CS_Product_Quantity_Ordered__c.field-meta.xml
<CustomField>
    <fullName>CS_Product_Quantity_Ordered__c</fullName>
    <label>Product Quantity Ordered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>