force-app/main/default/objects/CS_Service_Complaint_Product__c/fields/CS_Service_Complaint_Reason__c.field-meta.xml
<CustomField>
    <fullName>CS_Service_Complaint_Reason__c</fullName>
    <label>Service Complaint Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Appointment Assistance</fullName>
                <isActive>false</isActive>
                <label>Appointment Assistance</label>
            </value>
            <value>
                <fullName>BOL</fullName>
                <isActive>false</isActive>
                <label>BOL</label>
            </value>
            <value>
                <fullName>COA</fullName>
                <isActive>false</isActive>
                <label>COA</label>
            </value>
            <value>
                <fullName>CPU Versus Delivery</fullName>
                <isActive>false</isActive>
                <label>CPU Versus Delivery</label>
            </value>
            <value>
                <fullName>CPU Versus Delivery Change</fullName>
                <isActive>false</isActive>
                <label>CPU Versus Delivery Change</label>
            </value>
            <value>
                <fullName>CTL - Appointment Assistance</fullName>
                <isActive>false</isActive>
                <label>CTL - Appointment Assistance</label>
            </value>
            <value>
                <fullName>CTL - General Inquiry</fullName>
                <isActive>false</isActive>
                <label>CTL - General Inquiry</label>
            </value>
            <value>
                <fullName>CTL - Late Delivery</fullName>
                <isActive>false</isActive>
                <label>CTL - Late Delivery</label>
            </value>
            <value>
                <fullName>CTL - Order Date Change</fullName>
                <isActive>false</isActive>
                <label>CTL - Order Date Change</label>
            </value>
            <value>
                <fullName>Customer Service Error</fullName>
                <isActive>false</isActive>
                <label>Customer Service Error</label>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>General Inquiry</fullName>
                <isActive>false</isActive>
                <label>General Inquiry</label>
            </value>
            <value>
                <fullName>Invoice</fullName>
                <isActive>false</isActive>
                <label>Invoice</label>
            </value>
            <value>
                <fullName>Late Delivery</fullName>
                <isActive>false</isActive>
                <label>Late Delivery</label>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Order Confirmation</fullName>
                <isActive>false</isActive>
                <label>Order Confirmation</label>
            </value>
            <value>
                <fullName>Order Date Change - CTL Request</fullName>
                <isActive>false</isActive>
                <label>Order Date Change - CTL Request</label>
            </value>
            <value>
                <fullName>Order Date Change - Customer</fullName>
                <isActive>false</isActive>
                <label>Order Date Change - Customer</label>
            </value>
            <value>
                <fullName>Order Date Change - Customer Request</fullName>
                <isActive>false</isActive>
                <label>Order Date Change - Customer Request</label>
            </value>
            <value>
                <fullName>Order Handling</fullName>
            </value>
            <value>
                <fullName>OSD</fullName>
                <isActive>false</isActive>
                <label>OSD</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>POD</fullName>
                <isActive>false</isActive>
                <label>POD</label>
            </value>
            <value>
                <fullName>Product Handling</fullName>
            </value>
            <value>
                <fullName>Product Spec</fullName>
                <isActive>false</isActive>
                <label>Product Spec</label>
            </value>
            <value>
                <fullName>Products Specs</fullName>
                <isActive>false</isActive>
                <label>Products Specs</label>
            </value>
            <value>
                <fullName>Quantity Change - Customer</fullName>
                <isActive>false</isActive>
                <label>Quantity Change - Customer</label>
            </value>
            <value>
                <fullName>Quantity Change - Customer Request</fullName>
                <isActive>false</isActive>
                <label>Quantity Change - Customer Request</label>
            </value>
            <value>
                <fullName>Supply Chain</fullName>
                <isActive>false</isActive>
                <label>Supply Chain</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>