force-app/main/default/objects/CS_Service_Complaint_Product__c/fields/CS_Service_Complaint_Sub_Reason__c.field-meta.xml
<CustomField>
    <fullName>CS_Service_Complaint_Sub_Reason__c</fullName>
    <label>Service Complaint Sub-Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CS_Service_Complaint_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adjusted At Time Of Shipment</fullName>
            </value>
            <value>
                <fullName>As Loading</fullName>
            </value>
            <value>
                <fullName>As Unloading</fullName>
            </value>
            <value>
                <fullName>Beyond Cargill Control</fullName>
            </value>
            <value>
                <fullName>Business Decision</fullName>
            </value>
            <value>
                <fullName>BUSINESS DECISION/ATTAINMENT ISSUES</fullName>
                <isActive>false</isActive>
                <label>BUSINESS DECISION/ATTAINMENT ISSUES</label>
            </value>
            <value>
                <fullName>Carrier</fullName>
                <isActive>false</isActive>
                <label>Carrier</label>
            </value>
            <value>
                <fullName>COA Service Complaint</fullName>
            </value>
            <value>
                <fullName>Co Pack Issues</fullName>
            </value>
            <value>
                <fullName>Crushed</fullName>
            </value>
            <value>
                <fullName>DAMAGED AS UNLOADING</fullName>
                <isActive>false</isActive>
                <label>DAMAGED AS UNLOADING</label>
            </value>
            <value>
                <fullName>DAMAGED IN TRANSIT</fullName>
                <isActive>false</isActive>
                <label>DAMAGED IN TRANSIT</label>
            </value>
            <value>
                <fullName>Forked</fullName>
            </value>
            <value>
                <fullName>INS INV/INV ERROR</fullName>
                <isActive>false</isActive>
                <label>INS INV/INV ERROR</label>
            </value>
            <value>
                <fullName>INS INV/MICRO HOLD</fullName>
                <isActive>false</isActive>
                <label>INS INV/MICRO HOLD</label>
            </value>
            <value>
                <fullName>INS INV/NOT PRODUCED</fullName>
                <isActive>false</isActive>
                <label>INS INV/NOT PRODUCED</label>
            </value>
            <value>
                <fullName>INS INV/NOT RELEASED</fullName>
                <isActive>false</isActive>
                <label>INS INV/NOT RELEASED</label>
            </value>
            <value>
                <fullName>INS INV/ORDER LEADTIME</fullName>
                <isActive>false</isActive>
                <label>INS INV/ORDER LEADTIME</label>
            </value>
            <value>
                <fullName>INS INV/PACKAGING/INGREDIENTS/RAW MATERIAL</fullName>
                <isActive>false</isActive>
                <label>INS INV/PACKAGING/INGREDIENTS/RAW MATERIAL</label>
            </value>
            <value>
                <fullName>INS INV/PLANNING/SCHEDULING</fullName>
                <isActive>false</isActive>
                <label>INS INV/PLANNING/SCHEDULING</label>
            </value>
            <value>
                <fullName>INS INV/QA DELAY</fullName>
                <isActive>false</isActive>
                <label>INS INV/QA DELAY</label>
            </value>
            <value>
                <fullName>Insufficient Inv/Inv Error</fullName>
            </value>
            <value>
                <fullName>Insufficient Inv/Not Produced</fullName>
            </value>
            <value>
                <fullName>Insufficient Inv/Not Released</fullName>
            </value>
            <value>
                <fullName>Insufficient Inv/Packaging/Ingredients/Raw Material</fullName>
            </value>
            <value>
                <fullName>Insufficient Inv/Planning/Scheduling</fullName>
            </value>
            <value>
                <fullName>Insufficient Inv/Qa Delay</fullName>
            </value>
            <value>
                <fullName>In Transit</fullName>
            </value>
            <value>
                <fullName>LATE DELIVERY</fullName>
                <isActive>false</isActive>
                <label>LATE DELIVERY</label>
            </value>
            <value>
                <fullName>Late Delivery Cargill-Non Op</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>