force-app/main/default/objects/CS_Service_Complaint_Product__c/fields/CS_Total_Product_Claim_Cost__c.field-meta.xml
<CustomField>
    <fullName>CS_Total_Product_Claim_Cost__c</fullName>
    <label>Total Product Claim Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>