force-app/main/default/objects/CS_Service_Complaint_Product__c/fields/CS_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>CS_Unit_of_Measure__c</fullName>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pound(s)</fullName>
            </value>
            <value>
                <fullName>Kilogram(s)​</fullName>
            </value>
            <value>
                <fullName>Case​</fullName>
                <default>true</default>
                <label>Case​</label>
            </value>
            <value>
                <fullName>Combo​</fullName>
            </value>
            <value>
                <fullName>Carcass​</fullName>
            </value>
            <value>
                <fullName>Bin​</fullName>
            </value>
            <value>
                <fullName>Tray​</fullName>
            </value>
            <value>
                <fullName>Loaf​</fullName>
            </value>
            <value>
                <fullName>Load</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>