force-app/main/default/objects/CS_Service_Complaint_Product__c/validationRules/CS_PreventEditByNonCaseOwner.validationRule-meta.xml
<ValidationRule>
    <fullName>CS_PreventEditByNonCaseOwner</fullName>
    <active>true</active>
    <description>This rule will not allow users (other than system administrator), who are not owner of the case, to make any modification to Service Complaint record related to that case.</description>
    <errorConditionFormula>AND (
	NOT( ISNEW() ),
	NOT( $Profile.Name == &#39;System Administrator&#39; ), 
	$User.Id &lt;&gt;  CS_Case__r.OwnerId 
)</errorConditionFormula>
    <errorMessage>You are not authorized to modify the Service Complaint details. Please take the Ownership of related Case to modify Service Complaint detail.</errorMessage>
</ValidationRule>